--- a/css/styles.css
+++ b/css/styles.css
@@ -240,7 +240,7 @@ address{
 }
 
 
-<!-- Герой -->
+/* Герой*/
 
 
 
@@ -297,7 +297,7 @@ button{
 
     
 }
-<!--преимущества-->
+/* преимущества*/
 
 
 
@@ -420,7 +420,7 @@ button{
         
     
     }
-    <!--Комманда-->
+    /* Комманда */
 
 
     ul .team-names{
@@ -659,7 +659,7 @@ margin-bottom: 0;
     color:var(--link-color);
 }
 
-<!--Клиенты-->
+/* Клиенты */
 
 
 .clients .companies-list{
