--- a/css/styles.css
+++ b/css/styles.css
@@ -69,10 +69,7 @@ ul{
 }
 /* Шапка сайта */
 
-header{
-    width:1200px;
-    margin:0 auto;
-}
+
 .upper-logo{
     font-family: Raleway, sans-serif;
     font-size: 26px;
@@ -95,8 +92,7 @@ header{
 .container-nav{
     display: flex;
     width: 1200px;
-    padding-right: 15px;
-    padding-left: 15px;
+   
    
     margin: 0 auto;
     align-items: center;
@@ -108,6 +104,8 @@ header{
    
     width: 1200px;
     margin: 0 auto;
+    padding-left: 15px;
+    padding-right: 15px;
    
     
 }
@@ -118,16 +116,8 @@ header{
     border-top: 1px solid var(--border-color); 
 }
 
-.advantages-container{
-    padding:94px 15px 0 15px;
-    display: flex;
-    width: 1200px;
-    
+
    
-    margin: 0 auto;
-    
-    
-}
 
 .pages{
     
@@ -281,7 +271,6 @@ button{
     padding-bottom: 200px;
     background-image: linear-gradient(rgba(47, 48, 58, 0.8),rgba(47, 48, 58, 0.8)), url(../images/hero.jpg)  ;
     max-width: 1600px;
-    height: 600px;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -307,11 +296,10 @@ button{
 
 
 .advantages{
-    display:flex;
-    padding:0 0 94px 0;
-    margin: 0;
-
-    border-bottom: 1px solid var(--border-color);
+    padding:94px 0 0 0;
+    display: flex;
+    margin: 0 auto;
+    
 
 
 }
@@ -369,7 +357,8 @@ button{
 }
 .section-app{
     display:flex;
-    padding: 0 15px 94px 15px;
+    padding: 0 ;
+    margin: 0;
    
 
 }
@@ -421,7 +410,7 @@ button{
 
         padding: 94px 0 50px 0;
         margin: 0 auto;
-        width: 1200px;
+        
         
         
     
@@ -443,10 +432,10 @@ button{
     line-height: 1.2;
 
   display: flex;
-  padding: 0 15px;
-  margin: 0 auto;
+  padding: 0 ;
+  margin: 0 ;
   justify-content: center;
-  width: 1200px;
+  
 }
 
 .image-team{
@@ -667,18 +656,13 @@ margin-bottom: 0;
 
 /* Клиенты */
 
-.clients{
-    
-    
-    margin:0;
-    padding:0 215px 0 215px;
-}
+
 
 .companies-list{
   
     
-    padding: 0 15px 94px 15px ;  
-
+    padding: 0 0 94px 0 ;  
+    margin: 0;
     display: flex;
     justify-content: space-between;
 }
@@ -856,6 +840,7 @@ footer{
     position: absolute;
     top: 13px;
     left:148px;
+    margin-left: 10px;
 }
 .social-footer{
     display: inline-flex;
